# strata

./: Cargo.toml  README.md
src/: generate_mnemonic.rs  main.rs
